# boombot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/templates/: nginx-boombot.conf  start-frontend.sh  systemd-backend.service  systemd-discord.service
.github/workflows/: deploy-web.yml  deploy.yml  rust.yml
back/: Cargo.toml
back/src/: admin_model.rs  auth.rs  config.rs  handlers.rs  main.rs  models.rs  routes.rs  validation.rs
back/src/handlers/: admin.rs  health.rs  mod.rs  rules.rs
cleaner/: Cargo.toml
cleaner/src/: cleaners.rs  config.rs  database.rs  engine.rs  lib.rs  registry.rs  traits.rs
cleaner/src/config/: domain_rules.yaml
cleaner/src/database/: admin.rs  mod.rs  rules.rs
cli/: Cargo.toml
cli/src/: main.rs
discord/: .env.example  Cargo.toml
discord/src/: config.rs  error.rs  gateway.rs  http.rs  main.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: api.ts  form.ts  index.ts  main.ts  main.tsx  notification.ts  router.ts  router.tsx  rules.ts  style.css  table.ts
web/src/components/: AddRuleForm.tsx  CreateAdminForm.tsx  ProtectedRoute.tsx  RulesTable.tsx
web/src/config/: api.ts
web/src/contexts/: AuthContext.tsx
web/src/pages/: Admin.tsx  AdminConnection.tsx  Contribution.tsx  Home.tsx
web/src/services/: admin.ts  api.ts  base.ts  index.ts  rules.ts
web/src/types/: api.ts  auth.ts
