[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5", features = ["cors"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rusqlite = { version = "0.36.0", features = ["bundled"] }

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1.0", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }

validator = { version = "0.16", features = ["derive"] }

regex = "1.0"

lazy_static = "1.4"

bcrypt = "0.17.0"

jsonwebtoken = "9.3.1"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"

dotenv = "0.15"

cleaner = { path = "../cleaner" }